@@ -184,9 +184,6 @@ class Base:
             self.user_connect = True
         args.apply_profile_arg(self.config)
 
-        self.notebook_show_first_tab = not self.config.tabs_expanded or \
-                self.config.withdrawn
-
         self.builder = ui.builder('sonata')
         self.provider = ui.css_provider('sonata')
 
@@ -1841,11 +1838,7 @@ class Base:
             hints.min_width = -1
             hints.max_width = -1
             self.window.set_geometry_hints(self.window, hints, Gdk.WindowHints.USER_SIZE)
-        if self.notebook_show_first_tab:
-            # Sonata was launched in collapsed state. Ensure we display
-            # first tab:
-            self.notebook_show_first_tab = False
-            self.notebook.set_current_page(0)
+
         # Put focus to the notebook:
         self.on_notebook_page_change(self.notebook, 0,
                                      self.notebook.get_current_page())
@@ -2384,11 +2377,6 @@ class Base:
         self.notebook.set_no_show_all(False)
         self.config.withdrawn = False
         self.UIManager.get_widget('/traymenu/showmenu').set_active(True)
-        if self.notebook_show_first_tab and self.config.expanded:
-            # Sonata was launched in withdrawn state. Ensure we display
-            # first tab:
-            self.notebook_show_first_tab = False
-            self.notebook.set_current_page(0)
         self.withdraw_app_undo_present_and_focus()
 
     def withdraw_app_undo_present_and_focus(self):
